v.1 : TODO : Gestion de l'id dans les commentaires ! Parfois affiche null, parfois id
